--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WJV-6g-urE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -18,10 +18,14 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
                     </navigationBar>
+                    <connections>
+                        <segue destination="G7D-oN-nhZ" kind="show" identifier="setPaymentRootSwipeSegue" id="SLk-7T-3q9"/>
+                        <segue destination="ivX-u3-Bl0" kind="show" identifier="setPaymentRootManualSegue" id="fsV-En-CU0"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="izj-g9-wdM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="342" y="671"/>
+            <point key="canvasLocation" x="339" y="671"/>
         </scene>
         <!--Manual Entry-->
         <scene sceneID="Sw5-83-H6w">
@@ -376,7 +380,6 @@
                         <outlet property="lastNameField" destination="8eg-VH-Tzv" id="Gc5-II-aTi"/>
                         <outlet property="submitFormButton" destination="pyV-Uw-lTY" id="tzL-kk-n4m"/>
                         <outlet property="zipCodeField" destination="oZ2-2y-Sga" id="sQW-li-ffv"/>
-                        <segue destination="muR-e4-BZ6" kind="show" identifier="paymentToSignatureSegue" id="AnY-YM-pUf"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ocb-JK-iKR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -691,10 +694,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hXe-6z-Hbw" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="6zN-OX-d8x"/>
             </objects>
-            <point key="canvasLocation" x="1771" y="671"/>
+            <point key="canvasLocation" x="1797" y="353"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="AnY-YM-pUf"/>
-    </inferredMetricsTieBreakers>
 </document>
